--- a/mfp-web/pom.xml
+++ b/mfp-web/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <properties>
-        <mainclass>com.wyc.web.WebMainApp</mainclass>
+        <mainclass>com.wyc.service.ServiceMainApp</mainclass>
     </properties>
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
@@ -83,6 +83,9 @@
                                 </copy>
                                 <copy todir="${basedir}/target/bin">
                                     <fileset dir="src/main/bin"></fileset>
+                                </copy>
+                                <copy todir="${basedir}/target/docker/lib">
+                                    <fileset dir="${basedir}/target/lib"></fileset>
                                 </copy>
 
                             </target>
