--- a/mfp-web/src/main/docker/Dockerfile
+++ b/mfp-web/src/main/docker/Dockerfile
@@ -2,6 +2,6 @@ FROM frekele/java
 VOLUME /tmp
 ADD app.jar app.jar
 ADD lib lib
-RUN bash -c 'touch /app.jar'
+RUN bash -c 'touch app.jar'
 ENV JAVA_OPTS=""
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS  -jar /app.jar" ]
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS  -jar app.jar" ]
