--- a/mfp-web/pom.xml
+++ b/mfp-web/pom.xml
@@ -19,6 +19,29 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+
+
+
     </dependencies>
     <build>
         <plugins>
@@ -68,7 +91,7 @@
                 <version>1.8</version>
                 <executions>
                     <execution>
-                        <phase> package </phase>
+                        <phase>package</phase>
                         <configuration>
                             <target>
 
