--- a/mfp-service/pom.xml
+++ b/mfp-service/pom.xml
@@ -40,6 +40,8 @@
             <version>5.1.44</version>
         </dependency>
 
+
+
     </dependencies>
 
 
@@ -124,13 +126,14 @@
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.4</version>
                 <configuration>
-                    <configurationFile>src/main/resources/mybatis/plugin/generator.xml</configurationFile>
+                    <configurationFile>src/test/resources/mybatis/generator.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
                 </configuration>
                 <executions>
                     <execution>
                         <id>Generate MyBatis Artifacts</id>
+                        <phase>none</phase>
                         <goals>
                             <goal>generate</goal>
                         </goals>
